--- a/version-2021-feb-13/style.css
+++ b/version-2021-feb-13/style.css
@@ -102,10 +102,8 @@ a:hover {
     border-radius: 3px;
     font-size: 24px;
     font-family: "Arial", "DejaVu Sans", sans-serif;
-    width: 24px;
-    height: 24px;
-    overflow: hidden;
-    padding: 2px;
+    width: 28px;
+    height: 28px;
     text-align: center;
     vertical-align: middle;
     user-select: none;
@@ -116,95 +114,16 @@ a:hover {
     background: #ccf;
 }
 .icon-button:hover {
-    background: #888;
+    background: #666;
     color: #fff;
 }
 .icon-button:active {
     background: #aaa;
 }
 .icon-button .icon-color {
-    display: block;
-    margin: 5px;
+    display: inline-block;
     width: 14px;
     height: 14px;
-}
-
-.icon24-move {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: 0px -168px;
-}
-.icon24-crop {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -24px -168px;
-}
-.icon24-pencil {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -96px -216px;
-}
-.icon24-eraser {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -72px -192px;
-}
-.icon24-go-over {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: 0px -192px;
-}
-.icon24-go-through {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -48px -192px;
-}
-.icon24-go-under {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -24px -192px;
-}
-.icon24-crossing {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: 0px -216px;
-}
-.icon24-virtual-crossing {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -24px -216px;
-}
-.icon24-two-arrows {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -48px -216px;
-}
-.icon24-trash {
-    display: inline-block; width: 24px; height: 24px;
-    overflow: hidden;
-    background-image: url(icons.svg);
-    background-repeat: no-repeat;
-    background-position: -72px -216px;
 }
 
 #tools-td div.error {
