--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,10 @@ a:hover {
     display: inline-block;
 }
 
+.ui-spacer {
+    margin-right: 1em;
+}
+
 #ui-table td {
     vertical-align: top;
     padding: 0;
